--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
     docker:
       - image: cimg/openjdk:17.0
-    working_directory: ~/e-prod-high-school/Application
+    working_directory: ~/e-prod-high-school
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
