--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
     docker:
       - image: cimg/openjdk:17.0
     #working_directory: ~/e-prod-high-school
+    parallelism: 4
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
