--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,8 @@ workflows:
     jobs:
       - build-and-test
       - github-cli/release:
+          context:
+            - GITHUB_CREDS
           filters:
             branches:
               only:
