--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ workflows:
       - build-and-test
       - github-cli/release:
           context:
-            - GITHUB_CREDS
+            - GITHBUB_CREDS
           filters:
             branches:
               only:
