--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,5 +78,5 @@ workflows:
           requires:
             - build-and-test
           tag: 1.0.1
-          files: target/*.jar
+          files: target/e-prod-high-school-0.0.1-SNAPSHOT.jar
           title: The latest release
