--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>e-prod-high-school</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>e-prod-high-school</name>
-	<description>Demo project for Spring Boot</description>
+	<description>School Management System</description>
 	<properties>
 		<java.version>17</java.version>
 		<io.springfox.version>3.0.0</io.springfox.version>
