--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           path: ~/test-results
       - store_artifacts:
           name: Archiving Jar File
-          path: target/e-prod-high-school-0.0.1-SNAPSHOT.jar
+          path: target/e-prod-high-school-1.0.0.jar
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -77,5 +77,5 @@ workflows:
           notes-file: changelog.md
           requires:
             - build-and-test
-          tag: 1.0.1
+          tag: 1.0.2
           title: The latest release
